--- a/src/lib/Table/SidePreview/sidepreview.css
+++ b/src/lib/Table/SidePreview/sidepreview.css
@@ -5,3 +5,9 @@
   height: 200px;
   border: 3px solid rgba(0, 0, 0, 0.125);
 }
+.pdf-iframe {
+  width: 100%;
+  height: 300px;
+  border: transparent;
+  overflow: auto;
+}
