--- a/src/lib/FileUpload/fileupload.css
+++ b/src/lib/FileUpload/fileupload.css
@@ -31,12 +31,7 @@
 [hidden] {
   display: none !important;
 }
-/* .table-fixed {
-  display: block;
-}
-.table-fixed th {
-  width: 100%;
-} */
+
 .files_list {
   display: block;
   height: 300px;
@@ -89,4 +84,9 @@
 }
 .preview-video {
   width: 100%;
+}
+
+.preview-image {
+  width: 100%;
+  height: 350px !important;
 }
