--- a/src/lib/RecentCard/recent_card.css
+++ b/src/lib/RecentCard/recent_card.css
@@ -1,4 +1,5 @@
-.recent-card .card-title {
+.recent-card .card-title,
+.card_desc {
   margin-bottom: 0.3rem !important;
   width: 100%;
   overflow: hidden;
@@ -31,11 +32,14 @@
 .quick_card {
   height: 230px !important;
 }
+.recent_fileName {
+  color: #007bff;
+}
 .recent_fileName:hover {
   text-decoration: underline;
   cursor: pointer;
 }
 .card_image {
   max-width: 98%;
-  height: auto;
+  height: 133px;
 }
