--- a/src/lib/FileUpload/fileupload.css
+++ b/src/lib/FileUpload/fileupload.css
@@ -88,5 +88,12 @@
 
 .preview-image {
   width: 100%;
-  height: 350px !important;
+  height: 250px !important;
+}
+
+.desc_tags_container {
+  margin: 5%;
+}
+.tags-container {
+  margin-left: 2%;
 }
