--- a/src/lib/MediaHeader/media_header.css
+++ b/src/lib/MediaHeader/media_header.css
@@ -24,3 +24,10 @@
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   padding-bottom: 0.8rem;
 }
+
+.clearBtn {
+  margin-left: 2% !important;
+}
+.clearSearchBtn {
+  display: flex !important;
+}
