updated no result data to horiz and verti center

--- a/src/lib/Table/table.css
+++ b/src/lib/Table/table.css
@@ -20,6 +20,14 @@
   cursor: pointer;
 }
 
+.center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 200px;
+  border: 1px solid grey;
+}
+
 /* The snackbar - position it at the bottom and in the middle of the screen */
 #snackbar {
   visibility: hidden; /* Hidden by default. Visible on click */
