updated header with search

--- a/src/lib/MediaHeader/media_header.css
+++ b/src/lib/MediaHeader/media_header.css
@@ -31,3 +31,9 @@
 .clearSearchBtn {
   display: flex !important;
 }
+.search_container {
+  margin-top: 1.7%;
+}
+.tags_select {
+  height: 30px !important;
+}
