updated design for desc,table and fade

--- a/src/lib/FileUpload/fileupload.css
+++ b/src/lib/FileUpload/fileupload.css
@@ -105,3 +105,19 @@
 .ind_progress .progress-bar {
   height: 5px !important;
 }
+.fade_container {
+  color: green;
+  font-weight: bold;
+}
+.type-desc {
+  display: block;
+  width: 150px;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.upload-list-container {
+  height: 400px;
+  overflow: auto;
+  display: block;
+}
