updated media header design

--- a/src/lib/MediaHeader/media_header.css
+++ b/src/lib/MediaHeader/media_header.css
@@ -35,5 +35,13 @@
   margin-top: 1.7%;
 }
 .tags_select {
-  height: 30px !important;
+  height: 65px !important;
+}
+.search_holder {
+  width: 90% !important;
+  text-align: center;
+  margin: auto;
+}
+.tag_label {
+  text-align: right;
 }
