--- a/src/lib/MediaHeader/media_header.css
+++ b/src/lib/MediaHeader/media_header.css
@@ -32,7 +32,7 @@
   display: flex !important;
 }
 .search_container {
-  margin-top: 1.7%;
+  /* margin-top: 1.7%; */
 }
 .tags_select {
   height: 65px !important;
