--- a/src/lib/Table/table.css
+++ b/src/lib/Table/table.css
@@ -64,6 +64,12 @@
   animation: fadein 0.5s, fadeout 0.5s 2.5s;
 }
 
+.action-icon {cursor: pointer;}
+.main-header-35{ width: 35% !important;}
+.main-header-20{ width: 20% !important;}
+.main-header-15{ width: 15% !important;}
+.main-header-10{ width: 10% !important;}
+.data-table{ table-layout: fixed;}
 /* Animations to fade the snackbar in and out */
 @-webkit-keyframes fadein {
   from {
