PREP-625: description not updating for make public files fix

--- a/src/lib/FileUpload/fileupload.css
+++ b/src/lib/FileUpload/fileupload.css
@@ -132,7 +132,17 @@
 }
 
 #makePublic{
-  margin-top: 20px;
+  margin-top: 10px;
+  position: relative;
 }
 
 .make-public { min-width: 130px;}
+.file-preview {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+.file-preview span {
+  font-size: 20px;
+  opacity: 0.5;
+}
