--- a/src/lib/FileUpload/fileupload.css
+++ b/src/lib/FileUpload/fileupload.css
@@ -137,3 +137,12 @@
 }
 
 .make-public { min-width: 130px;}
+.file-preview {
+  display: flex;
+  justify-content: center;
+  padding-top: 100px;
+}
+.file-preview span {
+  font-size: 20px;
+  opacity: 0.5;
+}
